--- a/src/main/resources/templates/PacientesManager/pacientesManagement.html
+++ b/src/main/resources/templates/PacientesManager/pacientesManagement.html
@@ -183,9 +183,11 @@
 	
 	<div layout:fragment="scripts">
 		<script>
-		 
+		/*<![CDATA[*/
+	        var context = [[@{/}]];
+	    /*]]>*/
         var dtTable;
-        var urlContext="http://localhost:8081/paciente";
+        var urlContext=context+"paciente";
         var saveURL = urlContext+"/save";
         var listAllURL = urlContext+'/listAll';
         var getByURL = urlContext+"/getById/";
