--- a/src/main/resources/templates/PacientesManager/pacientesHistoria.html
+++ b/src/main/resources/templates/PacientesManager/pacientesHistoria.html
@@ -76,7 +76,7 @@
 	<div layout:fragment="scripts">
 		<script>
 		 /*<![CDATA[*/
-	        var context = [[@{/}]];
+	        var context = "/";
 	    /*]]>*/
         var dtTable;
          
