--- a/src/main/resources/templates/DoctoresManager/doctoresManagement.html
+++ b/src/main/resources/templates/DoctoresManager/doctoresManagement.html
@@ -100,7 +100,7 @@
 	<div layout:fragment="scripts">
 		<script>
 		/*<![CDATA[*/
-        var context = [[@{/}]];
+        var context = "/";
   		 /*]]>*/
         var dtTable;
         var urlContext=context+"doctor";
