--- a/src/main/resources/templates/InformeLabManager/informeLabDetalleManagement.html
+++ b/src/main/resources/templates/InformeLabManager/informeLabDetalleManagement.html
@@ -44,7 +44,7 @@
 	<div layout:fragment="scripts">
 		<script>
 			/*<![CDATA[*/
-		        var context = [[@{/}]];
+		        var context = "/";
 		    /*]]>*/
 			var urlContext = context+"informeLab";
 			 
