--- a/src/main/resources/templates/ModeloInformeLabManager/modeloInformeLabManagement.html
+++ b/src/main/resources/templates/ModeloInformeLabManager/modeloInformeLabManagement.html
@@ -87,7 +87,7 @@
 	<div layout:fragment="scripts">
 		<script>
 		/*<![CDATA[*/
-	        var context = [[@{/}]];
+	        var context = "/";
 	    /*]]>*/
         var dtTable;
         var urlContext=context+"modeloinformelab";
