--- a/src/main/resources/templates/PacientesManager/pacientesManagement.html
+++ b/src/main/resources/templates/PacientesManager/pacientesManagement.html
@@ -184,7 +184,7 @@
 	<div layout:fragment="scripts">
 		<script>
 		/*<![CDATA[*/
-	        var context = [[@{/}]];
+	        var context = "/";
 	    /*]]>*/
         var dtTable;
         var urlContext=context+"paciente";
