--- a/src/main/resources/templates/InformeLabManager/informeLabManagement.html
+++ b/src/main/resources/templates/InformeLabManager/informeLabManagement.html
@@ -44,7 +44,7 @@
                                  	<div class="form-group">
                                       <label for="pacienteid">Informe</label>
                                       
-                                      <textarea id="tinymce"  name="detalle"></textarea>
+                                      <textarea id="editorWeb"  name="detalle"></textarea>
                                  	</div>
                                  	<div class="form-group">
                                        <button type="button" id="button-informe" onclick="save()" class="btn btn-info">Agregar</button>
@@ -109,7 +109,7 @@
         var listAllURL = urlContext+'/listAllActivos';
         var getByURL = urlContext+"/getById/";
         var deleteURL = urlContext+"/delete/";
-       var tinymce;
+      var editor;
         function arrayDatatable(elem){
         	 var array=[
                  elem.informeid,
@@ -155,8 +155,8 @@
         }
         $('.select2').on('change', function() {
             var data = $(".select2 option:selected").data("detalle");
-            tinymce.get('tinymce').setContent(data);
            
+           editor.setContents(data);
         });
         
         $(document).ready(function () {
@@ -188,8 +188,8 @@
         }
         function cargarValorInforme(){
         	var dataDetalle = $(".select2 option").data("detalle");
+        	editor.setContents(dataDetalle);
         	 
-        	tinymce.get('tinymce').setContent(dataDetalle);
         }
         function cargarOpcionesPaciente(){
         	 showListAllFunctionGenerico(urlContextPaciente+'/listAllActivos',setOptionPacientes);
@@ -258,8 +258,8 @@
         	}else{
         		$("#doctorid").val("").trigger('change');
         	}
-        	
-        	tinymce.get('tinymce').setContent(data.detalle);
+        	editor.setContents(data.detalle);
+        	 
         	$("#title-informe").html("Editar Informe");
         	$("#button-informe").html("Editar");
         }
@@ -276,7 +276,8 @@
         }
         function resetFormElement() {
             resetForm("frmModalInforme");
-            tinymce.get('tinymce').setContent("");
+            editor.setContents("");
+            
         }
         
         function getFormData($form){
@@ -287,7 +288,7 @@
             	if(n['name']=='informeid' && (n['value']===0 || n['value']==='' )){
             		indexed_array[n['name']] = 0;
             	} else if(n['name']=='detalle'){
-            		indexed_array[n['name']] = tinymce.get('tinymce').getContent();
+            		indexed_array[n['name']] = editor.getContents();
             	} else{
                 	indexed_array[n['name']] = n['value'];
             	}
@@ -303,74 +304,26 @@
             changeYear: true
         });
         function MostrarSummerNote(){
-        	 var useDarkMode = window.matchMedia('(prefers-color-scheme: dark)').matches;
-             tinymce.init({
-             	  selector: 'textarea#tinymce',
-             	  plugins: 'print preview powerpaste casechange importcss tinydrive searchreplace autolink autosave save directionality advcode visualblocks visualchars fullscreen image link media mediaembed template codesample table charmap hr pagebreak nonbreaking anchor toc insertdatetime advlist lists checklist wordcount tinymcespellchecker a11ychecker imagetools textpattern noneditable help formatpainter permanentpen pageembed charmap tinycomments mentions quickbars linkchecker emoticons advtable',
-             	  tinydrive_token_provider: 'URL_TO_YOUR_TOKEN_PROVIDER',
-             	  tinydrive_dropbox_app_key: 'YOUR_DROPBOX_APP_KEY',
-             	  tinydrive_google_drive_key: 'YOUR_GOOGLE_DRIVE_KEY',
-             	  tinydrive_google_drive_client_id: 'YOUR_GOOGLE_DRIVE_CLIENT_ID',
-             	  mobile: {
-             	    plugins: 'print preview powerpaste casechange importcss tinydrive searchreplace autolink autosave save directionality advcode visualblocks visualchars fullscreen image link media mediaembed template codesample table charmap hr pagebreak nonbreaking anchor toc insertdatetime advlist lists checklist wordcount tinymcespellchecker a11ychecker textpattern noneditable help formatpainter pageembed charmap mentions quickbars linkchecker emoticons advtable'
-             	  },
-             	  menu: {
-             	    tc: {
-             	      title: 'TinyComments',
-             	      items: 'addcomment showcomments deleteallconversations'
-             	    }
-             	  },
-             	  menubar: 'file edit view insert format tools table tc help',
-             	  toolbar: 'undo redo | bold italic underline strikethrough | fontselect fontsizeselect formatselect | alignleft aligncenter alignright alignjustify | outdent indent |  numlist bullist checklist | forecolor backcolor casechange permanentpen formatpainter removeformat | pagebreak | charmap emoticons | fullscreen  preview save print | insertfile image media pageembed template link anchor codesample | a11ycheck ltr rtl | showcomments addcomment',
-             	  autosave_ask_before_unload: true,
-             	  autosave_interval: '30s',
-             	  autosave_prefix: '{path}{query}-{id}-',
-             	  autosave_restore_when_empty: false,
-             	  autosave_retention: '2m',
-             	  image_advtab: true,
-             	  link_list: [
-             	    { title: 'My page 1', value: 'https://www.tiny.cloud' },
-             	    { title: 'My page 2', value: 'http://www.moxiecode.com' }
-             	  ],
-             	  image_list: [
-             	    { title: 'My page 1', value: 'https://www.tiny.cloud' },
-             	    { title: 'My page 2', value: 'http://www.moxiecode.com' }
-             	  ],
-             	  image_class_list: [
-             	    { title: 'None', value: '' },
-             	    { title: 'Some class', value: 'class-name' }
-             	  ],
-             	  importcss_append: true,
-             	  templates: [
-             	        { title: 'New Table', description: 'creates a new table', content: '<div class="mceTmpl"><table width="98%%"  border="0" cellspacing="0" cellpadding="0"><tr><th scope="col"> </th><th scope="col"> </th></tr><tr><td> </td><td> </td></tr></table></div>' },
-             	    { title: 'Starting my story', description: 'A cure for writers block', content: 'Once upon a time...' },
-             	    { title: 'New list with dates', description: 'New List with dates', content: '<div class="mceTmpl"><span class="cdate">cdate</span><br /><span class="mdate">mdate</span><h2>My List</h2><ul><li></li><li></li></ul></div>' }
-             	  ],
-             	  template_cdate_format: '[Date Created (CDATE): %m/%d/%Y : %H:%M:%S]',
-             	  template_mdate_format: '[Date Modified (MDATE): %m/%d/%Y : %H:%M:%S]',
-             	  height: 600,
-             	  image_caption: true,
-             	  quickbars_selection_toolbar: 'bold italic | quicklink h2 h3 blockquote quickimage quicktable',
-             	  noneditable_noneditable_class: 'mceNonEditable',
-             	  toolbar_mode: 'sliding',
-             	  spellchecker_whitelist: ['Ephox', 'Moxiecode'],
-             	  tinycomments_mode: 'embedded',
-             	  content_style: '.mymention{ color: gray; }',
-             	  contextmenu: 'link image imagetools table configurepermanentpen',
-             	  a11y_advanced_options: true,
-             	  skin: useDarkMode ? 'oxide-dark' : 'oxide',
-             	  content_css: useDarkMode ? 'dark' : 'default',
-             	  /*
-             	  The following settings require more configuration than shown here.
-             	  For information on configuring the mentions plugin, see:
-             	  https://www.tiny.cloud/docs/plugins/premium/mentions/.
-             	  */
-             	  mentions_selector: '.mymention',
-             	  pagebreak_separator: "<!-- my page break -->"
-             	   
-             	});
+        	   editor=SUNEDITOR.create('editorWeb',{
+		   		     
+       		    width : '100%',
+       		    maxWidth : '600px',
+       		    minWidth : '400px',
+       		    height : 'auto',
+       		    videoWidth : '80%',
+       		    youtubeQuery : 'autoplay=1&mute=1&enablejsapi=1',
+       		    popupDisplay : 'local',
+       		    resizingBar : false,
+	       		 buttonList : [
+	 	   	        ['undo', 'redo', 'font', 'fontSize', 'formatBlock'],
+	 	   	        ['bold', 'underline', 'italic', 'strike', 'removeFormat','fontColor', 'hiliteColor', 'outdent', 'indent', 'align', 'horizontalRule', 'list', 'table','link', 'image', 'video', 'fullScreen', 'showBlocks', 'codeView', 'preview']
+	 	   	    ],
+       		    callBackSave: function (contents, isChanged) {
+       		        alert(contents);
+       		    }
+       	});
         }
-       
+        
         function agregarInforme(){
         	$("#title-informe").html("Agregar Informe de Laboratorio");
         	$("#informeid").val("");
