correccion url history paciente

--- a/src/main/resources/templates/PacientesManager/pacientesHistoria.html
+++ b/src/main/resources/templates/PacientesManager/pacientesHistoria.html
@@ -82,7 +82,7 @@
          
         var urlContextPaciente=context+"paciente";
         
-        var listAllURL="http://localhost:8081/paciente/historia/listAllByPaciente/";
+        var listAllURL=urlContextPaciente+"/historia/listAllByPaciente/";
         
         
        
