--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -10,10 +10,10 @@
     <meta name="keyword" content="FlatLab, Dashboard, Bootstrap, Admin, Template, Theme, Responsive, Fluid, Retina">
     <link rel="shortcut icon" href="img/favicon.html">
 
-    <title>FlatLab - Flat & Responsive Bootstrap Admin Template</title>
+    <title>MedicaLab</title>
 
     <!-- Bootstrap core CSS -->
-    
+   
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
     <link th:href="@{/css/bootstrap-reset.css}" rel="stylesheet">
     <!--external css-->
@@ -32,11 +32,11 @@
     <link rel="stylesheet" type="text/css" th:href="@{/assets/bootstrap-timepicker/compiled/timepicker.css}" />
     <link rel="stylesheet" type="text/css" th:href="@{/assets/bootstrap-daterangepicker/daterangepicker-bs3.css}" />
     <link rel="stylesheet" type="text/css" th:href="@{/assets/bootstrap-datetimepicker/css/datetimepicker.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/bootstrap-timepicker/compiled/timepicker.css}" />
+    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" th:href="@{/assets/select2/css/select2.min.css}"/>
-	<link href="https://cdn.jsdelivr.net/npm/suneditor@latest/dist/css/suneditor.min.css" rel="stylesheet"/>
-<!-- <link href="https://cdn.jsdelivr.net/npm/suneditor@latest/assets/css/suneditor.css" rel="stylesheet"> -->
-<!-- <link href="https://cdn.jsdelivr.net/npm/suneditor@latest/assets/css/suneditor-contents.css" rel="stylesheet"> -->
 	<link type="text/css" th:href="@{/css/style.css}" rel="stylesheet">
+	 <link th:href="@{/css/summernote-lite-primer.min.css}" rel="stylesheet">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 tooltipss and media queries -->
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
@@ -225,10 +225,8 @@
     <script th:src="@{/js/jquery.customSelect.min.js}" ></script>
     <script th:src="@{/js/respond.min.js}" ></script>
 	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-	
-<script src="https://cdn.jsdelivr.net/npm/suneditor@latest/dist/suneditor.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
 <!-- lanth:guages (Basic Language: English/en) -->
-<script src="https://cdn.jsdelivr.net/npm/suneditor@latest/src/lang/ko.js"></script>
 	
 	<script type="text/javascript"  th:src="@{/assets/fuelux/js/spinner.min.js}"></script>
 	  <script type="text/javascript"  th:src="@{/assets/bootstrap-fileupload/bootstrap-fileupload.js}"></script>
@@ -244,7 +242,7 @@
 	<script type="text/javascript" th:src="@{/js/jquery.validate.min.js}"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.3/jspdf.min.js"></script>
 	<script type="text/javascript" src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
-	
+	<script type="text/javascript" th:src="@{/assets/bootstrap-timepicker/js/bootstrap-timepicker.js}"></script>
   <!--select2-->
   <script type="text/javascript" th:src="@{/assets/select2/js/select2.min.js}"></script>
     <!--right slidebar-->
@@ -257,6 +255,7 @@
     <script th:src="@{/js/sparkline-chart.js}"></script>
     <script th:src="@{/js/easy-pie-chart.js}"></script>
     <script th:src="@{/assets/summernote/dist/summernote.min.js}"></script>
+     <script th:src="@{/js/summernote-es-ES.js}"></script>
     <script th:src="@{/js/count.js}"></script>
 	<div layout:fragment="scripts"></div>
   <script>
